some clean up of package names. fix up of symbol namespacing

--- a/doc/todo
+++ b/doc/todo
@@ -9,6 +9,11 @@
 * examples
 * locals override in render
 * alphabetize list-views
+* remove demo.lisp and hacks.lisp
+* readme
+
+- package examples
+- test on fresh instance
 
 
 
