--- a/doc/todo
+++ b/doc/todo
@@ -11,9 +11,8 @@
 * alphabetize list-views
 * remove demo.lisp and hacks.lisp
 * readme
-
-- package examples
-- test on fresh instance
+* package examples
+* test on fresh instance
 
 
 
